--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.3",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
-    "react": "^19.0.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
     "react-confetti-explosion": "^3.0.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zustand": "^5.0.6"
@@ -30,10 +30,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
